--- a/index.html
+++ b/index.html
@@ -20,11 +20,101 @@
 
 <body>
    <!-- Spinner -->
-    <div class="text-center spinner-margin">
-        <div class="spinner-grow" role="status"  id="spinner">
+    <!-- <div class="text-center spinner-margin">
+        <div class="spinner-border" role="status"  id="spinner">
         <span class="visually-hidden">Loading</span>
     </div>
     </div>
+     -->
+
+     <!-- Navbar -->
+     <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html"><span class="water-brush">Infography</span></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Blogs</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Authors</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+    </div>
+  </div>
+</div>
+</nav>
+<!-- Carousel -->
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="media/images/reporter-1 (1).jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5 class="h3 fst-italic fw-bold">We have professional repoters</h5>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque odio accusantium vero voluptatem, doloribus maxime!</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="media/images/pexels-katie-godowski-11291117.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5 class="h3 fst-italic fw-bold">We are always there to give you the latest updates</h5>
+        <p>Some representative placeholder content for the second slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="media/images/pexels-cdc-3992933.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5 class="h3 fst-italic fw-bold text-dark">We bring the best stories in the planet.</h5>
+       <p class="h5 fst-normal fw-normal text-dark">Some representative placeholder content for the second slide.</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+<!-- Description -->
+<section class="descrption bg-dark">
+    <div class="container-fluid">
+        <div class="grid">
+            <div class="row">
+                <div class="col-md-4 col-md-4">
+                    <div class="card">
+                        <img src="media/images/reporter-1 (1).jpg" class="img-fluid" />
+                        <div class="card-title">
+                            <h3 class="h3 text-center">Our reporters got your back.</h3>
+                        </div>
+                        <div class="card-body">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
     <!-- Bootstrap javascript -->
     <script src="js/script.js">
     </script>
