--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
-        </div>
+            </div>
         </div>
     </nav>
     <!-- Carousel -->
@@ -69,7 +69,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="media/images/reporter-1 (1).jpg" class="d-block w-100" alt="...">
+                <img src="media/images/reporter-1 (1).jpg" class="d-block w-100" alt="reporter-1">
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="h3 fst-italic fw-bold">We have professional repoters</h5>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque odio accusantium vero
@@ -77,14 +77,14 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="media/images/pexels-katie-godowski-11291117.jpg" class="d-block w-100" alt="...">
+                <img src="media/images/pexels-katie-godowski-11291117.jpg" class="d-block w-100" alt="reporter-2">
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="h3 fst-italic fw-bold">We are always there to give you the latest updates</h5>
                     <p>Some representative placeholder content for the second slide.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="media/images/pexels-cdc-3992933.jpg" class="d-block w-100" alt="...">
+                <img src="media/images/pexels-cdc-3992933.jpg" class="d-block w-100" alt="reporter-3"> -->
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="h3 fst-italic fw-bold text-dark">We bring the best stories in the planet.</h5>
                     <p class="h5 fst-normal fw-normal text-dark">Some representative placeholder content for the second
@@ -106,12 +106,12 @@
     </div>
     <!-- Description -->
     <section class="descrption bg-dark">
-        <div class="container-fluid">
+        <div class="container-fluid ">
             <div class="grid">
                 <div class="row">
                     <div class="col-md-4 col-md-4">
-                        <div class="card  mt-5">
-                            <img src="media/images/reporter-1 (1).jpg" class="img-fluid" />
+                        <div class="card my-5">
+                            <img src="media/images/reporter-1 (1).jpg" class="img-fluid" alt="desc-reporter-1" />
                             <div class="card-title  text-center mt-3">
                                 <h3 class="h3">Our reporters got your back.</h3>
                             </div>
@@ -123,14 +123,18 @@
                                     illum, dolores quae debitis explicabo aspernatur aliquid? Adipisci numquam facere
                                     dolor ut commodi voluptatum voluptas velit saepe nostrum! Dolorem.</p>
                             </div>
-                            <small class="card-footer water-brush">--<i class="fa fa-calendar fa-2x text-warning"></i >Date Posted: 23/02/2010</small>
-                            <small class="card-footer water-brush">--<i class="fa fa-book fa-2x text-success"></i >Name of article: New world era.</small>
-                            <small class="card-footer water-brush">--<i class="fa fa-2x text-danger fa-location"></i >Location:Lagos Nigeria</small>
+                            <small class="card-footer water-brush">--<i
+                                    class="fa fa-calendar fa-2x text-warning"></i>Date Posted: 23/02/2010</small>
+                            <small class="card-footer water-brush">--<i class="fa fa-book fa-2x text-success"></i>Name
+                                of article: New world era.</small>
+                            <small class="card-footer water-brush">--<i
+                                    class="fa fa-2x text-danger fa-location"></i>Location:Lagos Nigeria</small>
                         </div>
                     </div>
                     <div class="col-md-4 col-md-4">
                         <div class="card  mt-5">
-                            <img src="media/images/pexels-greta-hoffman-7859553.jpg" class="img-fluid" />
+                            <img src="media/images/pexels-greta-hoffman-7859553.jpg" class="img-fluid"
+                                alt="desc-reporter-1" />
                             <div class="card-title  text-center mt-3">
                                 <h3 class="h3">We give exclusive interviews</h3>
                             </div>
@@ -142,14 +146,18 @@
                                     illum, dolores quae debitis explicabo aspernatur aliquid? Adipisci numquam facere
                                     dolor ut commodi voluptatum voluptas velit saepe nostrum! Dolorem.</p>
                             </div>
-                            <small class="card-footer water-brush">--<i class="fa fa-calendar fa-2x text-warning"></i >Date Posted: 23/02/2010</small>
-                            <small class="card-footer water-brush">--<i class="fa fa-book fa-2x text-success"></i >Name of article: New world era.</small>
-                            <small class="card-footer water-brush">--<i class="fa fa-2x text-danger fa-location"></i >Location:Lagos Nigeria</small>
+                            <small class="card-footer water-brush">--<i
+                                    class="fa fa-calendar fa-2x text-warning"></i>Date Posted: 23/02/2010</small>
+                            <small class="card-footer water-brush">--<i class="fa fa-book fa-2x text-success"></i>Name
+                                of article: New world era.</small>
+                            <small class="card-footer water-brush">--<i
+                                    class="fa fa-2x text-danger fa-location"></i>Location:Lagos Nigeria</small>
                         </div>
                     </div>
                     <div class="col-md-4 col-md-4">
                         <div class="card  mt-5">
-                            <img src="media/images/pexels-edmond-dantès-7103151.jpg" class="img-fluid" />
+                            <img src="media/images/pexels-edmond-dantès-7103151.jpg" class="img-fluid"
+                                alt="desc-reporter-1" />
                             <div class="card-title  text-center mt-3">
                                 <h3 class="h3">We Give updates on democracy around the world</h3>
                             </div>
@@ -160,10 +168,55 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam hic voluptatibus
                                     illum, dolores quae debitis explicabo aspernatur .</p>
                             </div>
-                            <small class="card-footer water-brush">--<i class="fa fa-calendar fa-2x text-warning"></i >Date Posted: 23/02/2010</small>
-                            <small class="card-footer water-brush">--<i class="fa fa-book fa-2x text-success"></i >Name of article: New world era.</small>
-                            <small class="card-footer water-brush">--<i class="fa fa-2x text-danger fa-location"></i >Location:Lagos Nigeria</small>
+                            <small class="card-footer water-brush">--<i
+                                    class="fa fa-calendar fa-2x text-warning"></i>Date Posted: 23/02/2010</small>
+                            <small class="card-footer water-brush">--<i class="fa fa-book fa-2x text-success"></i>Name
+                                of article: New world era.</small>
+                            <small class="card-footer water-brush">--<i
+                                    class="fa fa-2x text-danger fa-location"></i>Location:Lagos Nigeria</small>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Description without cards -->
+    <section class="more__description p-5">
+        <div class="container">
+            <div class="grid">
+                <div class="row mt-5 text-center shadow-lg">
+                    <div class="col-md-3 col-sm-3">
+                        <i class="fa fa-fire fa-4x text-danger fw-bold"></i>
+                        <h3 class="h4 my-3 text-uppercase water-brush">Information is power</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptas repellendus
+                            consequuntur rerum pariatur veritatis minima architecto temporibus debitis et.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptas repellendus
+                            consequuntur rerum pariatur veritatis minima architecto temporibus debitis et.</p>
+                    </div>
+                    <div class="col-md-3 col-sm-3">
+                        <i class="fa fa-users fa-4x text-primary fw-bold"></i>
+                        <h3 class="h4 my-3 text-uppercase water-brush">We keep you inform</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptas repellendus
+                            consequuntur rerum pariatur veritatis minima architecto temporibus debitis et.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptas repellendus
+                            consequuntur rerum pariatur veritatis minima architecto temporibus debitis et.</p>
+                    </div>
+                    <div class="col-md-3 col-sm-3">
+                        <i class="fa fa-lock fa-4x text-warning fw-bold"></i>
+                        <h3 class="h4 my-3 text-uppercase water-brush">Data protection</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptas repellendus
+                            consequuntur rerum pariatur veritatis minima architecto temporibus debitis et.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptas repellendus
+                            consequuntur rerum pariatur veritatis minima architecto temporibus debitis et.</p>
+                    </div>
+                    <div class="col-md-3 col-sm-3">
+                         <i class="fa fa-dollar-sign fa-4x text-success fw-bold"></i>
+                        <h3 class="h4 my-3 text-uppercase water-brush">Money back gurantee</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptas repellendus
+                            consequuntur rerum pariatur veritatis minima architecto temporibus debitis et.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam voluptas repellendus
+                            consequuntur rerum pariatur veritatis minima architecto temporibus debitis et.</p>
                     </div>
                 </div>
             </div>
@@ -174,6 +227,6 @@
     </script>
     <script src="js/bootstrap.bundle.js"></script>
     <script src="js/bootstrap.bundle.js.map"></script>
-</div>
+</body>
 
-</div>
+</html>
